--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="css/style.css">
-  
+
   <meta name="description" content="Hallo Saya Arif, terimakasih telah mengunjungi website saya">
   <meta name="author" content="Arifzyn">
   <meta name="keywords" content="Arifzyn, arifzyn, ArifzynXD, Arifzyn XD, arifzynxd, arifzyn xd">
-  <meta property="og:image" content="https://telegra.ph/file/5e2d93ac913217a303b79.jpg"/> 
-  
+  <meta property="og:image" content="https://telegra.ph/file/5e2d93ac913217a303b79.jpg" />
+
 </head>
 
 <body>
@@ -25,11 +25,12 @@
       </div>
 
       <div class="sidebar">
-        <div class="sidebar-title">Arifzyn</div>
+        <p class="sidebar-title">Arifzyn</p>
         <div class="sidebar-close-btn" onclick="closeSidebar()">&times;</div>
-        <a href="#about">About</a>
-        <a href="#experience">Experience</a>
-        <a href="javascript:void(0)" data-section="#experience">Contact</a>
+        <a href="https://api.arifzyn.tech">REST API</a>
+        <a href="https://wa.me/6288213503541">WHATSAPP</a>
+        <a hrer="https://YouTube.com/@arifzxa19">YOUTUBE</a>
+        <a href="https://instagram.com/@arifzxa19">INSTAGRAM</a>
       </div>
     </header>
   </div>
